2007-05-07  Peter Bloomfield

	* libbalsa/mailbox_local.c: (libbalsa_mailbox_local_get_message):
	check msgno.
	* src/balsa-index.c: (bndx_change_flags), (bndx_tree_expand_cb):
	ditto.
	* libbalsa/misc.c: (libbalsa_set_fallback_codeset): include
	UTF-8 as a charset.
	* src/balsa-message.c: (mdn_dialog_response): do not clear NULL
	error.

2007-05-06  Albrecht Dreß

	* configure.in: add HTML flags and libs.

2007-05-06  Peter Bloomfield

	* libbalsa/html.h: compile with GtkHtml3 and GtkPrint.
	* libbalsa/mailbox.c: (libbalsa_mailbox_get_message): compile
	with threads disabled.
	* libbalsa/mailbox.h: remove LB_MAILBOX_STATE_TREECLEANING from
	LibBalsaMailboxState enum.
	* libbalsa/mailbox.c: (libbalsa_mailbox_msgno_filt_out),
	(lbm_set_threading): remove LB_MAILBOX_STATE_TREECLEANING code;
	(lbm_get_index_entry_real): check that mailbox is still open;
	(libbalsa_mailbox_get_message): lock mailbox before checking
	args.
	* src/balsa-index.h: add current_msgno to BalsaIndex structure,
	and remove selected and selection_changed_id; new public method
	balsa_index_selected_msgnos.
	* src/balsa-index.c: provide GArray of selected messages only
	when needed.
	* src/balsa-mblist.c: (bmbl_drag_cb): use
	balsa_index_selected_msgnos.
	* src/main-window.c: (notebook_drag_received_cb): ditto.
	* src/sendmsg-window.c: ditto.
	* libbalsa/mailbox_local.h: new LibBalsaMailboxLocalMessageInfo
	structure and LibBalsaMailboxLocalClass method get_info; remove
	load_message class method; do not export 
	libbalsa_mailbox_local_queue_sync--it's now static.
	* libbalsa/mailbox_local.c: implement LibBalsaMailboxClass methods
	get_message, messages_change_flags, and msgno_has_flags here
	instead of in back-ends; keep a pool of object-reffed messages.
	* libbalsa/mailbox_maildir.c: remove LibBalsaMailboxClass methods
	get_message, messages_change_flags, and msgno_has_flags.
	* libbalsa/mailbox_mbox.c: ditto
	* libbalsa/mailbox_mh.c: ditto.
	* src/balsa-message.c: (display_part): ensure UTF-8;